Added:
* gateway service backed by Zulu
* discovery service backed by Eureka